# engram

./: .beads  .dockerignore  .env.example  .env.prod.example  .env.production.template  .gitignore  .tool-versions  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Caddyfile  GEMINI.md  README.md  biome.json  bunfig.toml  cloudbuild.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  package-lock.json  package.json  test-preload.ts  turbo.json  vitest.config.ts  vitest.workspace.ts
.beads/: issues.jsonl
.gemini/: GEMINI_REPORT.md  TEST_COVERAGE_REPORT.md
.github/: dependabot.yml
.github/benchmark-history/: badge.json
.github/workflows/: benchmark.yml  ci.yml  deploy.yml  publish-mcp.yml  uv-lock-sync.yml
.husky/: pre-commit
.plans/: tool-call-lineage-enhancement.md
apps/api/: .env.example  API_KEYS.md  AUTH_FLOW.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  ORGANIZATIONS_API.md  README.md  package.json
apps/console/: Dockerfile  components.json  middleware.ts  proxy.ts  (+4 more)
apps/search/: .gitignore  Dockerfile  Dockerfile.dev  README.md  package.json  pyproject.toml  tsconfig.json
apps/search-py/: Dockerfile.dev  README.md  ROLLBACK.md  pyproject.toml
apps/search-py/src/search/: config.py  main.py
apps/search-py/src/search/api/: router.py  routes.py  schemas.py
apps/search-py/src/search/clients/: __init__.py  kafka.py
apps/search-py/src/search/embedders/: __init__.py  base.py  code.py  colbert.py  factory.py  sparse.py  text.py
apps/search-py/src/search/indexing/: README.md  indexer.py
apps/search-py/src/search/rerankers/: __init__.py  colbert.py  cross_encoder.py  flash.py  router.py
apps/search-py/src/search/retrieval/: __init__.py  retriever.py  types.py
apps/search-py/src/search/services/: schema_manager.py
apps/search-py/src/search/utils/: __init__.py  logging.py  rate_limiter.py  tracing.py
apps/search-py/tests/: test_embedders.py  test_health.py  test_logging.py  test_metrics.py  test_multi_query.py  test_retriever.py
apps/search/src/: __init__.py  config.py  index.test.ts  index.ts  main.py
apps/search/src/api/: __init__.py  router.py  routes.py  schemas.py
apps/search/src/chunking/: __init__.py  late.py  semantic.py
apps/search/src/clients/: __init__.py  huggingface.py  kafka.py  nats.py  nats_pubsub.py  qdrant.py  redis.py
apps/search/src/embedders/: __init__.py  base.py  bm25.py  code.py  colbert.py  factory.py  sparse.py  text.py
apps/search/src/evaluation/: __init__.py  benchmark.py
apps/search/src/indexing/: README.md  __init__.py  batch.py  consumer.py  indexer.py  turns.py
apps/search/src/middleware/: __init__.py  auth.py
apps/search/src/rerankers/: __init__.py  base.py  colbert.py  cross_encoder.py  flash.py  llm.py  router.py
apps/search/src/retrieval/: __init__.py  classifier.py  constants.py  multi_query.py  retriever.py  session.py  types.py
apps/search/src/scripts/: __init__.py  backfill_turns.py
apps/search/src/search/: main.py
apps/search/src/search/api/: __init__.py  routes.py
apps/search/src/search/clients/: __init__.py  qdrant.py  redis.py
apps/search/src/search/embedders/: code.py  colbert.py  text.py
apps/search/src/search/indexing/: __init__.py  batch.py  consumer.py
apps/search/src/search/rerankers/: cross_encoder.py  llm.py
apps/search/src/search/retrieval/: __init__.py  classifier.py  multi_query.py  session.py
apps/search/src/search/services/: __init__.py
apps/search/src/search/utils/: metrics.py
apps/search/src/services/: __init__.py  schema_manager.py
apps/search/src/utils/: __init__.py  metrics.py  rate_limiter.py  tracing.py
apps/search/tests/: conftest.py  test_auth.py  test_auth_extended.py  test_auth_token_expiration.py  test_backfill_turns.py  test_bm25.py  test_chunking.py  test_classifier.py  test_clients.py  test_colbert.py  test_config.py  test_consumer.py  test_embedder_base.py  test_embedder_factory.py  test_embedders.py  test_health.py  test_indexing.py  test_late_chunking.py  test_logging.py  test_main.py  test_main_app.py  test_metrics.py  test_multi_query.py  test_multi_query_comprehensive.py  test_nats_client.py  test_qdrant.py  test_rate_limiter.py  test_reranker_base.py  test_reranker_llm.py  test_reranker_router_comprehensive.py  test_rerankers.py  test_retriever.py  test_retriever_comprehensive.py  test_retriever_filter.py  test_routes.py  test_schema_manager.py  test_search.py  test_search_quality_benchmark.py  test_semantic_chunking.py  test_session_retrieval_comprehensive.py  (+4 more)
apps/search/tests/clients/: test_huggingface.py
apps/tuner/: Dockerfile  Dockerfile.dev  README.md  package.json  pyproject.toml
apps/tuner/src/tuner/: __init__.py  config.py  main.py
apps/tuner/src/tuner/api/: __init__.py  analysis.py  health.py  router.py  studies.py  trials.py
apps/tuner/src/tuner/core/: __init__.py  pruners.py  samplers.py  storage.py
apps/tuner/src/tuner/middleware/: __init__.py  auth.py
apps/tuner/src/tuner/models/: __init__.py  search_space.py  study.py  trial.py
apps/tuner/src/tuner/utils/: __init__.py  logging.py
apps/tuner/tests/: conftest.py  test_api_analysis.py  test_api_studies.py  test_api_trials.py  test_config.py  test_core.py  test_core_storage.py  test_health.py  test_main.py  test_middleware_auth.py  test_models.py  test_utils_logging.py
configs/: Caddyfile
docs/: TECH_STACK.md  architecture.md  auto-tuning.md  configuration-defaults.md  sparse-embedding-evaluation.md  tuner-benchmark-integration-prompt.md  tuner-benchmark-integration.md
scripts/: benchmark-sparse-embedders.ts  claude-ingestion-test.sh  claude-ingestion-test.ts  codex-ingestion-test.ts  confluent-kafka-test.ts  deploy-hetzner.sh  engram.service  gemini-ingestion-test.ts  infra-down.sh  infra-up.sh  init-nats-streams.ts  kafka-test.ts  kill-dev-ports.sh  migrate-auth.sql  migrate-device-auth.sql  migrate-schema.ts  node-kafka-test.ts  opencode-ingestion-test.ts  provision-server.sh  requirements-fusion.txt  seed-api-key.sql  seed-oauth-clients.ts  seed-tofu-token.ts  test.sh  traffic-gen.ts  train_fusion_mlp.py  verify-oauth-setup.sh
(+665 files in other folders)
