[project]
name = "engram-search"
version = "0.1.0"
description = "Intelligent vector search service for Engram with embedding and reranking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # ML inference
    "sentence-transformers>=3.3.0",
    "torch>=2.5.0",
    "transformers>=4.48.0",
    "einops>=0.8.1",
    # Reranking
    "rerankers[transformers]>=0.6.0",
    "flashrank>=0.2.0",
    "pylate>=1.1.0",
    "litellm>=1.55.0",
    # Vector DB
    "qdrant-client>=1.12.0",
    # Messaging & Cache
    "aiokafka>=0.11.0",
    "redis[hiredis]>=5.0.0",
    # HTTP
    "httpx>=0.28.0",
    # Logging
    "structlog>=24.0.0",
    # Metrics
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
search = "search.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.14.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.10",
]
