[project]
name = "engram-search"
version = "0.1.0"
description = "Intelligent vector search service for Engram with embedding and reranking"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Web framework
    "fastapi>=0.126.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    # ML inference
    "sentence-transformers>=5.1.1,<5.2.0",
    "torch>=2.6.0,<2.9.0",
    "transformers>=4.41.0,<4.57.0",
    "einops>=0.8.1",
    # Reranking
    "rerankers[transformers]>=0.10.0",
    "flashrank>=0.2.10",
    "pylate>=1.3.4",
    "litellm>=1.80.10",
    # Vector DB
    "qdrant-client>=1.16.2",
    # Messaging & Cache
    "aiokafka>=0.12.0",
    "redis[hiredis]>=7.1.0",
    # HTTP
    "httpx>=0.28.1",
    # Logging
    "structlog>=25.5.0",
    # Metrics
    "prometheus-client>=0.23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
]

[project.scripts]
search = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "aiokafka",
    "aiokafka.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "torch",
    "torch.*",
    "transformers",
    "transformers.*",
    "pylate",
    "pylate.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
