[project]
name = "engram-search"
version = "0.1.0"
description = "Intelligent vector search service for Engram with embedding and reranking"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Web framework
    "fastapi>=0.126.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    # Vector DB
    "qdrant-client>=1.16.2",
    # Messaging & Cache
    "nats-py>=2.9.0",
    "redis[hiredis]>=7.1.0",
    # HTTP & HuggingFace API
    "httpx>=0.28.1",
    "huggingface-hub[inference]>=0.20.0",
    "numpy>=2.0.0",
    # LLM reranking
    "litellm>=1.80.10",
    # Logging
    "structlog>=25.5.0",
    # Metrics
    "prometheus-client>=0.23.1",
    # Database (for API key auth)
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
# Local ML models (for development/testing without API)
local = [
    "sentence-transformers>=5.1.1,<5.2.0",
    "torch>=2.6.0,<2.9.0",
    "transformers>=4.41.0,<4.57.0",
    "einops>=0.8.1",
    "rerankers[transformers]>=0.10.0",
    "flashrank>=0.2.10",
    "pylate>=1.3.4",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "mypy>=1.19.1",
]

[project.scripts]
search = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests often have long lines for mock setups and nested with for patch+pytest.raises
"tests/*" = ["E501", "SIM117", "N806"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --tb=short --cov=src --cov-report=term-missing --cov-branch"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # ML modules require optional dependencies not installed in CI
    "src/embedders/text.py",
    "src/embedders/code.py",
    "src/embedders/sparse.py",
    "src/embedders/colbert.py",
    "src/rerankers/flash.py",
    "src/rerankers/cross_encoder.py",
    "src/rerankers/colbert.py",
    "src/chunking/semantic.py",
    "src/chunking/late.py",
]

[tool.coverage.report]
# Lower threshold for CI since ML modules are excluded when optional deps not installed
fail_under = 70
precision = 1
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "nats",
    "nats.*",
    "huggingface_hub",
    "huggingface_hub.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "torch",
    "torch.*",
    "transformers",
    "transformers.*",
    "pylate",
    "pylate.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
